[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet bags list"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-bags-list"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

# primitives
sp-runtime = {version = "4.1.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

# FRAME
frame-election-provider-support = {version = "4.0.0-dev", default-features = false, path = "../election-provider-support"}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}

# third party
log = {version = "0.4.14", default-features = false}

# Optional imports for benchmarking
frame-benchmarking = {version = "4.0.0-dev", path = "../benchmarking", optional = true, default-features = false}
pallet-balances = {version = "4.0.0-dev", path = "../balances", optional = true, default-features = false}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core", optional = true, default-features = false}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io", optional = true, default-features = false}
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing", optional = true, default-features = false}

[dev-dependencies]
frame-benchmarking = {version = "4.0.0-dev", path = "../benchmarking"}
frame-election-provider-support = {version = "4.0.0-dev", path = "../election-provider-support", features = ["runtime-benchmarks"]}
pallet-balances = {version = "4.0.0-dev", path = "../balances"}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io"}
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing"}

[features]
default = ["std"]
fuzz = [
  "sp-core",
  "sp-io",
  "pallet-balances",
  "sp-tracing",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "sp-core",
  "sp-io",
  "pallet-balances",
  "sp-tracing",
  "frame-election-provider-support/runtime-benchmarks",
]
std = [
  "codec/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "frame-election-provider-support/std",
  "log/std",
]
try-runtime = ["frame-support/try-runtime"]
