[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Macro for benchmarking a FRAME runtime."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "frame-benchmarking"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
linregress = {version = "0.4.4", optional = true}
log = {version = "0.4.14", default-features = false}
paste = "1.0"
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-api = {version = "4.0.0-dev", path = "../../primitives/api", default-features = false}
sp-application-crypto = {version = "4.0.0-dev", path = "../../primitives/application-crypto", default-features = false}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io", default-features = false}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime", default-features = false}
sp-runtime-interface = {version = "4.0.0", path = "../../primitives/runtime-interface", default-features = false}
sp-std = {version = "4.0.0", path = "../../primitives/std", default-features = false}
sp-storage = {version = "4.0.0", path = "../../primitives/storage", default-features = false}

[dev-dependencies]
hex-literal = "0.3.4"
sp-keystore = {version = "0.10.0-dev", path = "../../primitives/keystore"}

[features]
default = ["std"]
runtime-benchmarks = []
std = [
  "codec/std",
  "scale-info/std",
  "sp-runtime-interface/std",
  "sp-runtime/std",
  "sp-api/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "linregress",
  "log/std",
]
