[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collective system: Members of a set of account IDs can make their collective feelings known through dispatched calls from one of two specialized origins."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-collective"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
log = {version = "0.4.14", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

sp-core = {version = "4.0.0", default-features = false, path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", default-features = false, path = "../../primitives/io"}
sp-runtime = {version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
