[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet based on seq-Phragmén election method."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-elections-phragmen"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "5.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
log = {version = "0.4.14", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.0.0", default-features = false, path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", default-features = false, path = "../../primitives/io"}
sp-npos-elections = {version = "4.0.0-dev", default-features = false, path = "../../primitives/npos-elections"}
sp-runtime = {version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

[dev-dependencies]
pallet-balances = {version = "4.0.0-dev", path = "../balances"}
sp-core = {version = "4.0.0", path = "../../primitives/core"}
substrate-test-utils = {version = "4.0.0-dev", path = "../../test-utils"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-npos-elections/std",
  "frame-system/std",
  "sp-std/std",
  "sp-io/std",
  "sp-core/std",
  "log/std",
]
try-runtime = ["frame-support/try-runtime"]
