[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME's I'm online pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-im-online"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
log = {version = "0.4.14", default-features = false}
pallet-authorship = {version = "4.0.0-dev", default-features = false, path = "../authorship"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-application-crypto = {version = "4.0.0-dev", default-features = false, path = "../../primitives/application-crypto"}
sp-core = {version = "4.0.0", default-features = false, path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", default-features = false, path = "../../primitives/io"}
sp-runtime = {version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-staking = {version = "4.0.0-dev", default-features = false, path = "../../primitives/staking"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}

[dev-dependencies]
pallet-session = {version = "4.0.0-dev", path = "../session"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "sp-application-crypto/std",
  "pallet-authorship/std",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-staking/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
]
try-runtime = ["frame-support/try-runtime"]
