[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME indices management pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-indices"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-core = {version = "4.0.0", default-features = false, path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", default-features = false, path = "../../primitives/io"}
sp-keyring = {version = "4.0.0-dev", optional = true, path = "../../primitives/keyring"}
sp-runtime = {version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}

[dev-dependencies]
pallet-balances = {version = "4.0.0-dev", path = "../balances"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "sp-keyring",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "frame-support/std",
  "sp-runtime/std",
  "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
